--- a/DeepLearning-Actions/05-nlp-basic.ipynb
+++ b/DeepLearning-Actions/05-nlp-basic.ipynb
@@ -562,9 +562,8 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92068fb1-20f4-4724-9b99-04d477d42b1d",
+   "id": "e467c62a-feb8-48f6-8282-2ae439586447",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -574,32 +573,246 @@
     "+ [NLTK](https://www.nltk.org/#)：官网首页\n",
     "+ [NLTK Python Module Index](https://www.nltk.org/py-modindex.html)：API结构\n",
     "\n",
-    "> NLTK的官方文档写的不那么好，没有提供tutorial之类的教程，主要是因为NLTK本身是一个工具包的集合，所以使用的时候，建议想用哪个功能，就去找对应模块的内容即可。\n",
+    ">NLTK的官方文档写的不那么好，没有提供tutorial之类的教程，主要是因为NLTK本身是一个工具包的集合，所以使用的时候，建议想用哪个功能，就去找对应模块的内容即可。  \n",
+    "好在NLTK官方文档提供了一个有关各个模块使用例子的文档集合 [Example usage of NLTK modules](https://www.nltk.org/howto.html)，可以当做一个简单的上手教程。\n",
     "\n",
-    "常用的NLTK模块如下：\n",
-    "\n",
+    "常用的NLTK模块如下："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb2b4edb-d853-47d7-a6c2-9aa48d88b090",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
     "### 分词\n",
     "NLTK提供了 `nltk.tokenize` 模块，官方文档 [nltk.tokenize package](https://www.nltk.org/api/nltk.tokenize.html#module-nltk.tokenize).    \n",
     "主要是如下两个分词**函数**（不是类）\n",
     "+ `nltk.tokenize.sent_tokenize(text, language='english')`：用于分割句子\n",
     "+ `nltk.tokenize.word_tokenize(text, language='english', preserve_line=False)`：用于分割单词\n",
     "\n",
-    "上面两个是该子模块的顶层函数，如果要对分词进行更加细致的控制，`nltk.tokenize`还提供了一系列的子module.\n",
+    "上面两个是该子模块的顶层函数，如果要对分词进行更加细致的控制，`nltk.tokenize`还提供了一系列的子module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "9689ac6d-f197-4793-aa3f-85adb5eec8d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good muffins cost $3.88\n",
+      "in New York.  Please buy me two of them.\n",
+      "\n",
+      "Thanks.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "\n",
-    "\n",
+    "s = '''Good muffins cost $3.88\\nin New York.  Please buy me two of them.\\n\\nThanks.'''\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "490f00a2-787d-4e98-bd0f-aafa01b293cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Good muffins cost $3.88\\nin New York.',\n",
+       " 'Please buy me two of them.',\n",
+       " 'Thanks.']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 执行下面这个需要下载 NLTK 的 punkt 分词模型\n",
+    "sent_tokenize(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "abc8aac8-5434-40eb-a046-74bf6d374479",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Good', 'muffins', 'cost', '$', '3.88', 'in', 'New', 'York', '.'],\n",
+       " ['Please', 'buy', 'me', 'two', 'of', 'them', '.'],\n",
+       " ['Thanks', '.']]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[word_tokenize(t) for t in sent_tokenize(s)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1006419c-bb4f-4da9-a69c-310a4477c9aa",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
     "### 词干提取\n",
-    "NLTK提供了`nltk.stem` 模块，官方文档 [nltk.stem package](https://www.nltk.org/api/nltk.stem.html)\n",
+    "NLTK提供了`nltk.stem` 模块，官方文档 [nltk.stem package](https://www.nltk.org/api/nltk.stem.html).\n",
+    "\n",
+    "经常使用的有如下几个词干提取类：\n",
     "+ `nltk.stem.porter.PorterStemmer()`类，封装了Porter提取算法\n",
     "+ `nltk.stem.snowball`模块里提供了非英语类词干的提取方法\n",
     "+ `nltk.stem.wordnet.WordNetLemmatizer()`类，提供了词形还原的算法\n",
-    "  \n",
-    "  \n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "30c9d5fc-c900-4df1-bbe7-80ab64a084e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 完整导入路径\n",
+    "# from nltk.stem.porter import PorterStemmer\n",
+    "# from nltk.stem.snowball import SnowballStemmer\n",
+    "# from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "\n",
+    "# 或者这样导入也行\n",
+    "from nltk.stem import PorterStemmer, SnowballStemmer, WordNetLemmatizer\n",
+    "\n",
+    "words = ['working', 'works', 'worked', 'was', 'are', 'is', 'increases', 'increased', 'cars', 'flies', 'agreed', 'meeting', 'plotted']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "fd5c8366-05db-4269-8b92-17c9218e91b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['work', 'work', 'work', 'wa', 'are', 'is', 'increas', 'increas', 'car', 'fli', 'agre', 'meet', 'plot']\n"
+     ]
+    }
+   ],
+   "source": [
+    "stemmer = PorterStemmer()\n",
+    "print([stemmer.stem(word) for word in words])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e93312cc-de21-466c-8ddb-46cf7994832a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['work', 'work', 'work', 'was', 'are', 'is', 'increas', 'increas', 'car', 'fli', 'agre', 'meet', 'plot']\n"
+     ]
+    }
+   ],
+   "source": [
+    "stemmer = SnowballStemmer(language='english')\n",
+    "print([stemmer.stem(word) for word in words])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "ab0a6683-ec9f-47a7-98db-9ecd84db4e57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['working', 'work', 'worked', 'wa', 'are', 'is', 'increase', 'increased', 'car', 'fly', 'agreed', 'meeting', 'plotted']\n"
+     ]
+    }
+   ],
+   "source": [
+    "lemmatizer = WordNetLemmatizer()\n",
+    "print([lemmatizer.lemmatize(word) for word in words])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df7e3824-aecd-4efb-a656-af9e03778cfc",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
     "### 词性标注\n",
-    "NLTK提供了 `nltk.tag` 模块，官方文档 [nltk.tag package](https://www.nltk.org/api/nltk.tag.html)\n",
+    "NLTK提供了 `nltk.tag` 模块，官方文档 [nltk.tag package](https://www.nltk.org/api/nltk.tag.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa795186-63ae-45e7-8927-179deef3c55d",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "### 语料库\n",
+    "NLTK提供了 `nltk.corpus` 模块，官方文档 [nltk.corpus package](https://www.nltk.org/api/nltk.corpus.html).  \n",
     "\n",
-    "\n",
-    "### 语料库处理\n",
-    "NLTK提供了 `nltk.corpus` 模块，官方文档 [nltk.corpus package](https://www.nltk.org/api/nltk.corpus.html)"
+    "提供了一系列的语料库，比如停用词集合等。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "732963f4-9f28-467c-b1af-576bef8866ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 获取停用词表\n",
+    "from nltk.corpus import stopwords\n",
+    "words = stopwords.words('english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "482f7b93-e5ef-4ca2-8e00-5c7b825f141f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len(words):  179\n",
+      "['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"len(words): \", len(words))\n",
+    "print(words[:10])"
    ]
   },
   {
@@ -607,10 +820,124 @@
    "id": "5d7997ba-05cc-42c8-803d-0f4d2916ae4b",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "## gensim\n",
     "\n",
     "官方文档 [gensim documentation](https://radimrehurek.com/gensim/auto_examples/index.html#documentation).\n",
-    "> gensim 本身比较轻量化，整个package的使用通俗易懂，没有太多的API设计，官方文档比较精炼，还提供了tutorial，便于快速上手。"
+    "> gensim 本身比较轻量化，整个package的使用通俗易懂，没有太多的API设计，官方文档比较精炼，还提供了tutorial，便于快速上手。\n",
+    "\n",
+    "下面的介绍都是摘自gensim的官方文档。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05e6ce2d-e135-4385-a896-1730d269ce06",
+   "metadata": {},
+   "source": [
+    "### gensim核心概念与API设计\n",
+    "\n",
+    "1. Document：一段文本，通常为一个句子\n",
+    "2. Corpus：语料库，document的集合，也就是多个句子组成的段落或者文章\n",
+    "3. Vector：一个document的向量表示，注意，gensim中，大部分都是以document为最小粒度，除了词向量的部分\n",
+    "4. Model：这里的模型指的是将 document 的一种 vector 表示转换成另一种 vector 表示的算法。\n",
+    "\n",
+    "上面的四个概念里：\n",
+    "+ 第1个是输入，第3个是输出，所以没有对应的API的类；\n",
+    "+ 第2个对应于gensim中的 `corpora` 模块中的具体类，用来保存语料库的特征，比如语料中的词典集合\n",
+    "+ 第4个对应于 `model` 模块中的具体类，不同vector表示方式对应于不同的model\n",
+    "\n",
+    "除了上述两个模块，gensim 还提供了 `similarity` 和 `topic_coherence` 模块，提供了相似度计算和主题模型的一些支持。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "e0d9767a-1f02-4719-b521-59ec79a7de86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['human', 'interface', 'computer'],\n",
+      " ['survey', 'user', 'computer', 'system', 'response', 'time'],\n",
+      " ['eps', 'user', 'interface', 'system'],\n",
+      " ['system', 'human', 'system', 'eps'],\n",
+      " ['user', 'response', 'time'],\n",
+      " ['trees'],\n",
+      " ['graph', 'trees'],\n",
+      " ['graph', 'minors', 'trees'],\n",
+      " ['graph', 'minors', 'survey']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pprint\n",
+    "\n",
+    "document = \"Human machine interface for lab abc computer applications\"\n",
+    "\n",
+    "# 下面这段文本会被多次用到\n",
+    "text_corpus = [\n",
+    "    \"Human machine interface for lab abc computer applications\",\n",
+    "    \"A survey of user opinion of computer system response time\",\n",
+    "    \"The EPS user interface management system\",\n",
+    "    \"System and human system engineering testing of EPS\",\n",
+    "    \"Relation of user perceived response time to error measurement\",\n",
+    "    \"The generation of random binary unordered trees\",\n",
+    "    \"The intersection graph of paths in trees\",\n",
+    "    \"Graph minors IV Widths of trees and well quasi ordering\",\n",
+    "    \"Graph minors A survey\",\n",
+    "]\n",
+    "\n",
+    "# gensim 没有提供分词、去除停用词、词性还原等操作，所以这里简单的手动处理一下\n",
+    "# Create a set of frequent words\n",
+    "stoplist = set('for a of the and to in'.split(' '))\n",
+    "# Lowercase each document, split it by white space and filter out stopwords\n",
+    "texts = [[word for word in document.lower().split() if word not in stoplist]\n",
+    "         for document in text_corpus]\n",
+    "\n",
+    "# Count word frequencies\n",
+    "from collections import defaultdict\n",
+    "frequency = defaultdict(int)\n",
+    "for text in texts:\n",
+    "    for token in text:\n",
+    "        frequency[token] += 1\n",
+    "\n",
+    "# Only keep words that appear more than once\n",
+    "processed_corpus = [[token for token in text if frequency[token] > 1] for text in texts]\n",
+    "\n",
+    "pprint.pprint(processed_corpus)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b118c15-c58b-4d64-824d-6271b70815bd",
+   "metadata": {},
+   "source": [
+    "+ 有了语料，需要将上述语料表示成语料库，统计其中的一些特征，这部分工作由 `gensim.corpora` 模块中的类完成。   \n",
+    "这里使用的是 `gensim.corpora.Dictionary` 类，它会"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "7283f198-fa32-41db-a312-dd622f2f6d94",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary(12 unique tokens: ['computer', 'human', 'interface', 'response', 'survey']...)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gensim import corpora\n",
+    "\n",
+    "dictionary = corpora.Dictionary(processed_corpus)\n",
+    "print(dictionary)"
    ]
   },
   {
@@ -618,6 +945,8 @@
    "id": "e2b6f26e-3444-4bff-b1d2-859006543412",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "## spaCy\n",
     "\n",
     "官方文档 [spaCy](https://spacy.io/) —— spaCy的官方文档写的挺好的。\n",
@@ -652,7 +981,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analysis(Python3.8.12)",
+   "display_name": "DataAnalysis(Python3.8.13)",
    "language": "python",
    "name": "data-analysis"
   },
@@ -666,7 +995,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   },
   "toc-autonumbering": true
  },
