--- a/DeepLearning-Actions/05-nlp-basic.ipynb
+++ b/DeepLearning-Actions/05-nlp-basic.ipynb
@@ -11,10 +11,10 @@
      "output_type": "stream",
      "text": [
       "package版本信息：\n",
-      "numpy:       1.21.5\n",
-      "pandas:      1.4.3\n",
-      "matplotlib:  3.5.2\n",
-      "sklearn:     1.1.1\n",
+      "numpy:       1.22.3\n",
+      "pandas:      1.4.2\n",
+      "matplotlib:  3.5.1\n",
+      "sklearn:     1.0.2\n",
       "seaborn:     0.11.2\n"
      ]
     }
@@ -484,15 +484,13 @@
    "id": "c8ae68ad-2713-435f-95e6-e9386a42c165",
    "metadata": {},
    "source": [
-    "## GloVe"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8cb8b88f-b016-412f-828d-abe4cc0cec70",
-   "metadata": {},
-   "source": [
-    "## Word2Vec"
+    "### 常用的实现\n",
+    "\n",
+    "+ word2vec   \n",
+    "这个是Google实现的一个C语言包，官网为 [word2vec](https://code.google.com/archive/p/word2vec/)，Python中如果要使用，一般是调用gensim中的相关实现。\n",
+    "\n",
+    "+ fastText   \n",
+    "这个是Facebook的改进版。"
    ]
   },
   {
@@ -852,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "id": "e0d9767a-1f02-4719-b521-59ec79a7de86",
    "metadata": {},
    "outputs": [
@@ -874,6 +872,7 @@
    ],
    "source": [
     "import pprint\n",
+    "from collections import defaultdict\n",
     "\n",
     "document = \"Human machine interface for lab abc computer applications\"\n",
     "\n",
@@ -898,7 +897,6 @@
     "         for document in text_corpus]\n",
     "\n",
     "# Count word frequencies\n",
-    "from collections import defaultdict\n",
     "frequency = defaultdict(int)\n",
     "for text in texts:\n",
     "    for token in text:\n",
@@ -916,12 +914,12 @@
    "metadata": {},
    "source": [
     "+ 有了语料，需要将上述语料表示成语料库，统计其中的一些特征，这部分工作由 `gensim.corpora` 模块中的类完成。   \n",
-    "这里使用的是 `gensim.corpora.Dictionary` 类，它会"
+    "这里使用的是 `gensim.corpora.Dictionary` 类，它会统计输入语料中的单词，构建词典集合，将每个文档表示成数值向量，通常是**bag-of-word表示**，这个表示法是将文档转成其他向量形式的起点。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "id": "7283f198-fa32-41db-a312-dd622f2f6d94",
    "metadata": {},
    "outputs": [
@@ -929,7 +927,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dictionary(12 unique tokens: ['computer', 'human', 'interface', 'response', 'survey']...)\n"
+      "Dictionary<12 unique tokens: ['computer', 'human', 'interface', 'response', 'survey']...>\n",
+      "\n",
+      "{'computer': 0, 'human': 1, 'interface': 2, 'response': 3, 'survey': 4, 'system': 5, 'time': 6, 'user': 7, 'eps': 8, 'trees': 9, 'graph': 10, 'minors': 11}\n"
      ]
     }
    ],
@@ -937,7 +937,195 @@
     "from gensim import corpora\n",
     "\n",
     "dictionary = corpora.Dictionary(processed_corpus)\n",
-    "print(dictionary)"
+    "\n",
+    "# 查看语料的词典\n",
+    "print(dictionary, '\\n')\n",
+    "\n",
+    "# 查看词典的ID和单词的对应关系\n",
+    "print(dictionary.token2id, '\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0aa13f0f-d546-4d65-9705-9b655a4ca3cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 2, 2: 2, 0: 2, 4: 2, 7: 3, 5: 4, 3: 2, 6: 2, 8: 2, 9: 3, 10: 3, 11: 2} \n",
+      "\n",
+      "{1: 2, 2: 2, 0: 2, 4: 2, 7: 3, 5: 3, 3: 2, 6: 2, 8: 2, 9: 3, 10: 3, 11: 2} \n",
+      "\n",
+      "9 \n",
+      "\n",
+      "29\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 查看文档中各个单词的词频\n",
+    "print(dictionary.cfs, '\\n')\n",
+    "\n",
+    "# 查看各个单词在文档中出现的频数\n",
+    "print(dictionary.dfs, '\\n')\n",
+    "\n",
+    "# 总文档数\n",
+    "print(dictionary.num_docs, '\\n')\n",
+    "\n",
+    "# 语料中的单词总数\n",
+    "print(dictionary.num_pos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42fcc792-c512-480e-9113-b427f6dd3ab0",
+   "metadata": {},
+   "source": [
+    "+ 使用`doc2bow()`将文本转成 bow 向量。   \n",
+    "  + 返回一个 list of 二元tuple，tuple 的第一个元素是单词在词库中的ID，第二个是频数。   \n",
+    "  + 只会返回出现过的单词，不会返回词库中未出现的单词，因为这些单词的count都是0\n",
+    "  + `return_missing=True`参数会再返回一个dict，其中记录的是不在词典中的单词和对应频数。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a6d08529-fee7-45ec-8882-fe1bd569b6b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 1), (1, 1)]\n",
+      "([(0, 1), (1, 1)], {'interaction': 1})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 使用语料库将文本转换成 bow 向量\n",
+    "new_doc = \"Human computer interaction\"\n",
+    "new_doc_proc = new_doc.lower().split()\n",
+    "\n",
+    "new_vec_dense = dictionary.doc2bow(new_doc_proc)\n",
+    "print(new_vec_dense)\n",
+    "\n",
+    "# interaction 不在词典库中\n",
+    "new_vec_sparse = dictionary.doc2bow(new_doc_proc, return_missing=True)\n",
+    "print(new_vec_sparse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "124e23fd-6304-43ce-a547-3a7d22f4fd39",
+   "metadata": {},
+   "source": [
+    "+ 使用`doc2idx(document, unknown_word_index=-1)`将文本中的单词转成词库中的索引\n",
+    "  + 未在词库中出现的单词会被转成 unknow_word_index 指定的值，默认为-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "333acfae-6d54-4216-949b-c62048066dcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_vec_idx = dictionary.doc2idx(new_doc_proc)\n",
+    "print(new_vec_idx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4231f121-9d6c-4489-bc7c-db2148a26f3e",
+   "metadata": {},
+   "source": [
+    "### model\n",
+    "\n",
+    "使用 `corpora` 模块中的各种dictionary构建语料库和基本的BOW文档向量之后，就可以使用 `model` 模块中的各类模型将基本的BOW向量转成其他的形式了。\n",
+    "\n",
+    "下面以TF-IDF为例介绍model的使用。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "56785e92-7547-4d51-b843-cad5938cd98c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models import TfidfModel\n",
+    "\n",
+    "# 首先将上面的原始文档全部转成 BOW 向量 —— 这通常是转成其他表示向量的出发点\n",
+    "bow_corpus = [dictionary.doc2bow(text) for text in processed_corpus]\n",
+    "\n",
+    "# 传入上述转换好的bow向量，初始化对象时，也就完成了 TF-IDF 的训练\n",
+    "tfidf = TfidfModel(bow_corpus)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "bca85953-61b0-4b3c-bbfa-da872b66b437",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(5, 0.5898341626740045), (11, 0.8075244024440723)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# transform the \"system minors\" string\n",
+    "words = \"system minors\".lower().split()\n",
+    "\n",
+    "# 使用 tfidf[] 的形式来转换 bow 向量\n",
+    "print(tfidf[dictionary.doc2bow(words)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1292cbc8-9646-4dd7-b409-830cecebd1fe",
+   "metadata": {},
+   "source": [
+    "### word2vec\n",
+    "\n",
+    "gensim的`models`模块中，提供了 word2vec 的支持，可供参考的官方文档如下：\n",
+    "+ [models.word2vec](https://radimrehurek.com/gensim/models/word2vec.html)\n",
+    "+ 上手教程：[Word2Vec Model](https://radimrehurek.com/gensim/auto_examples/tutorials/run_word2vec.html#word2vec-model)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb77b578-ac36-432f-9f6e-65ab73956388",
+   "metadata": {},
+   "source": [
+    "### fastText\n",
+    "\n",
+    "gensim的`models`模块还提供了对 fastText 的支持，对应的官方文档为：\n",
+    "+ [models.fasttext](https://radimrehurek.com/gensim/models/fasttext.html)\n",
+    "+ 上手教程 [FastText Model](https://radimrehurek.com/gensim/auto_examples/tutorials/run_fasttext.html#fasttext-model)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ec7265a-b11c-417c-af85-5d3f6bc9efec",
+   "metadata": {},
+   "source": [
+    "### 其他API"
    ]
   },
   {
@@ -981,7 +1169,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DataAnalysis(Python3.8.13)",
+   "display_name": "data-analysis(Python3.8.12)",
    "language": "python",
    "name": "data-analysis"
   },
@@ -995,7 +1183,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.12"
   },
   "toc-autonumbering": true
  },
