--- a/DeepLearning-Actions/04-nlp-basic.ipynb
+++ b/DeepLearning-Actions/04-nlp-basic.ipynb
@@ -444,8 +444,10 @@
     "基于分布假说的词表示方法，根据建模的不同，常见的有如下3种：\n",
     "1. 基于计数（Count-Based）的分布式表示，也被称为基于矩阵的分布式表示，比如 GloVe 词向量\n",
     "2. 基于聚类的分布表示——这个其实用的不多\n",
-    "3. 基于神经网络的分布表示——这个用的最多\n",
-    "\n"
+    "3. 基于神经网络的分布表示——这个用的最多  \n",
+    "基于神经网络的分布表示又分为两种：\n",
+    "    + 固定表征：比如word2vec、fastText\n",
+    "    + 动态表征：比如ELMO、GPT、BERT"
    ]
   },
   {
@@ -845,12 +847,15 @@
     "+ 第2个对应于gensim中的 `corpora` 模块中的具体类，用来保存语料库的特征，比如语料中的词典集合\n",
     "+ 第4个对应于 `model` 模块中的具体类，不同vector表示方式对应于不同的model\n",
     "\n",
-    "除了上述两个模块，gensim 还提供了 `similarity` 和 `topic_coherence` 模块，提供了相似度计算和主题模型的一些支持。"
+    "除了上述两个模块，gensim 还提供了 `similarity` 和 `topic_coherence` 模块，提供了相似度计算和主题模型的一些支持。\n",
+    "\n",
+    "注意：\n",
+    "> **gensim本身没有提供分词处理，词性还原，词干提取等功能**，这些步骤通常需要使用NLTK或者其他的包来完成。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e0d9767a-1f02-4719-b521-59ec79a7de86",
    "metadata": {},
    "outputs": [
@@ -919,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "7283f198-fa32-41db-a312-dd622f2f6d94",
    "metadata": {},
    "outputs": [
@@ -927,9 +932,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dictionary<12 unique tokens: ['computer', 'human', 'interface', 'response', 'survey']...>\n",
+      "Dictionary(12 unique tokens: ['computer', 'human', 'interface', 'response', 'survey']...) \n",
       "\n",
-      "{'computer': 0, 'human': 1, 'interface': 2, 'response': 3, 'survey': 4, 'system': 5, 'time': 6, 'user': 7, 'eps': 8, 'trees': 9, 'graph': 10, 'minors': 11}\n"
+      "{'computer': 0, 'human': 1, 'interface': 2, 'response': 3, 'survey': 4, 'system': 5, 'time': 6, 'user': 7, 'eps': 8, 'trees': 9, 'graph': 10, 'minors': 11} \n",
+      "\n"
      ]
     }
    ],
@@ -947,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "0aa13f0f-d546-4d65-9705-9b655a4ca3cc",
    "metadata": {},
    "outputs": [
@@ -986,13 +992,13 @@
    "source": [
     "+ 使用`doc2bow()`将文本转成 bow 向量。   \n",
     "  + 返回一个 list of 二元tuple，tuple 的第一个元素是单词在词库中的ID，第二个是频数。   \n",
-    "  + 只会返回出现过的单词，不会返回词库中未出现的单词，因为这些单词的count都是0\n",
+    "  + **只会返回出现过的单词，不会返回词库中未出现的单词，因为这些单词的count都是0。**\n",
     "  + `return_missing=True`参数会再返回一个dict，其中记录的是不在词典中的单词和对应频数。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "a6d08529-fee7-45ec-8882-fe1bd569b6b8",
    "metadata": {},
    "outputs": [
@@ -1029,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "333acfae-6d54-4216-949b-c62048066dcd",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "56785e92-7547-4d51-b843-cad5938cd98c",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "bca85953-61b0-4b3c-bbfa-da872b66b437",
    "metadata": {},
    "outputs": [
@@ -1093,6 +1099,7 @@
     "words = \"system minors\".lower().split()\n",
     "\n",
     "# 使用 tfidf[] 的形式来转换 bow 向量\n",
+    "# 注意，输入的文档必须转换成 BOW 向量\n",
     "print(tfidf[dictionary.doc2bow(words)])"
    ]
   },
@@ -1104,8 +1111,156 @@
     "### word2vec\n",
     "\n",
     "gensim的`models`模块中，提供了 word2vec 的支持，可供参考的官方文档如下：\n",
-    "+ [models.word2vec](https://radimrehurek.com/gensim/models/word2vec.html)\n",
-    "+ 上手教程：[Word2Vec Model](https://radimrehurek.com/gensim/auto_examples/tutorials/run_word2vec.html#word2vec-model)."
+    "+ 上手教程：[Word2Vec Model](https://radimrehurek.com/gensim/auto_examples/tutorials/run_word2vec.html#word2vec-model).\n",
+    "+ [models.word2vec](https://radimrehurek.com/gensim/models/word2vec.html).\n",
+    "\n",
+    "其中最重要的类为：`models.word2vec.Word2Vec`\n",
+    "+ 参数：\n",
+    "  + sentence：训练语料，必须是嵌套迭代器的形式，也就是 list of sentence，不能是生成器，因为要多次迭代\n",
+    "  + vector_size：词向量大小\n",
+    "  + window：上下文窗口大小\n",
+    "  + min_count：最小词频\n",
+    "  + workers：线程数\n",
+    "  + sg：训练算法，0表示CBOW，1表示Skip-gram\n",
+    "  + hs：优化算法，0表示hierarchical softmax，1表示使用negative sampling\n",
+    "  + negative：negative sampling算法使用的负样本数量\n",
+    "  + alpha：初始学习率\n",
+    "  + epochs：训练的轮次\n",
+    "  \n",
+    "+ 属性：\n",
+    "  + `wv`：单词与词向量的映射dict\n",
+    " \n",
+    "+ 方法：\n",
+    "  + `save()`，保存模型\n",
+    "  + `load()`，加载模型\n",
+    "  + `train()`，继续训练模型"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c21c18a-b045-4b03-b4a3-bf5b8d6d6e13",
+   "metadata": {},
+   "source": [
+    "+ 训练word2vec模型\n",
+    "\n",
+    "参考官网教程 [word2vec -> Training Your Own Model](https://radimrehurek.com/gensim/auto_examples/tutorials/run_word2vec.html#training-your-own-model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "b068831f-4f79-4651-99d3-0a42ce8df9c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/opt/miniconda3/envs/data-analysis/lib/python3.8/site-packages/gensim/test/test_data/lee_background.cor\n"
+     ]
+    }
+   ],
+   "source": [
+    "from gensim.test.utils import datapath\n",
+    "from gensim import utils\n",
+    "# 注意模型是首字母大写的类\n",
+    "from gensim.models import Word2Vec\n",
+    "\n",
+    "# 返回自带的小型数据集的绝对路径\n",
+    "print(datapath('lee_background.cor'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "67cef864-95bd-42ee-abf1-94d6a7c1a982",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 将数据集封装成迭代器\n",
+    "class MyCorpus:\n",
+    "    \"\"\"An iterator that yields sentences (lists of str).\"\"\"\n",
+    "\n",
+    "    def __iter__(self):\n",
+    "        corpus_path = datapath('lee_background.cor')\n",
+    "        for line in open(corpus_path):\n",
+    "            # assume there's one document per line, tokens separated by whitespace\n",
+    "            # 这里使用的 gensim 提供的简单文本处理函数，如果需要更加复杂的处理，可以自己实现逻辑，只要返回处理好语句的单词即可\n",
+    "            yield utils.simple_preprocess(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "7d703af5-4fa2-4944-a245-9c974eeea89d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 开始训练\n",
+    "sentences = MyCorpus()\n",
+    "w2v = Word2Vec(sentences)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "addbd969-037f-4f0b-81a3-1312e7d1973b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gensim.models.word2vec.Word2Vec at 0x7ffd2d4e8c10>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w2v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5c935d89-70a0-4d50-8621-ac1890d9f06f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(100,)\n",
+      "[-0.01628607  0.04837617  0.01103079  0.01284426  0.01023216 -0.09064601\n",
+      "  0.03705835  0.09189238 -0.0044394  -0.01557803]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 查看单词 king 的词向量，如果该单词不在词表里，会报错\n",
+    "print(w2v.wv['king'].shape)\n",
+    "print(w2v.wv['king'][:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b10d8a53-6d0a-4af8-9285-3e66965a88a8",
+   "metadata": {},
+   "source": [
+    "+ 使用google新闻语料预训练好的word2vec，下面需要下载近1.6G的模型。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37137f49-7f1b-4258-bdfc-c81aaede34a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gensim.downloader as api\n",
+    "# wv = api.load('word2vec-google-news-300')"
    ]
   },
   {
@@ -1125,7 +1280,143 @@
    "id": "1ec7265a-b11c-417c-af85-5d3f6bc9efec",
    "metadata": {},
    "source": [
-    "### 其他API"
+    "### 其他API\n",
+    "\n",
+    "**`gensim.downloader`**\n",
+    "\n",
+    "提供了语料下载和预训练模型的下载接口，主要有如下两个函数：\n",
+    "\n",
+    "+ `downloader.info(name=None, show_only_latest=True, name_only=False)`，显示模型或者数据集的信息.   \n",
+    "不带参数时，会返回所有可用模型或者数据集的信息\n",
+    "  + `name`，数据集或者模型的名称\n",
+    "  + `name_only`，是否只显示名称\n",
+    "  \n",
+    "+ `downloader.load(name, return_path=False)`，加载指定模型或者数据集。   \n",
+    "如果模型或者数据集未下载，则会下载相应的模型和数据集。\n",
+    "\n",
+    "上面两个函数还可以通过命令行来执行：\n",
+    "```python\n",
+    "python -m gensim.downloader --info <dataname> # same as api.info(dataname)\n",
+    "python -m gensim.downloader --info name # same as api.info(name_only=True)\n",
+    "python -m gensim.downloader --download <dataname> # same as api.load(dataname, return_path=True)\n",
+    "```\n",
+    "\n",
+    "**此外，`downloader.BASE_DIR`属性保存的是数据集或者模型的下载路径，可以通过环境变量`GENSIM_DATA_DIR`来覆盖掉**。\n",
+    "\n",
+    "可供下载的模型或者数据集见：[RaRe-Technologies/gensim-data](https://github.com/RaRe-Technologies/gensim-data)。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "bf16d415-27d6-4ac0-94f6-61219b56bb4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gensim.downloader as api"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3e4e997e-605f-40b8-8c7e-cfa73e128d2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/daniel/gensim-data'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# gensim 存放数据或者模型的默认路径，可以通过设置环境变量 GENSIM_DATA_DIR 来覆盖掉\n",
+    "api.BASE_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c6468f35-3045-43a1-8841-3023585d0fb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'corpora': ['semeval-2016-2017-task3-subtaskBC',\n",
+       "  'semeval-2016-2017-task3-subtaskA-unannotated',\n",
+       "  'patent-2017',\n",
+       "  'quora-duplicate-questions',\n",
+       "  'wiki-english-20171001',\n",
+       "  'text8',\n",
+       "  'fake-news',\n",
+       "  '20-newsgroups',\n",
+       "  '__testing_matrix-synopsis',\n",
+       "  '__testing_multipart-matrix-synopsis'],\n",
+       " 'models': ['fasttext-wiki-news-subwords-300',\n",
+       "  'conceptnet-numberbatch-17-06-300',\n",
+       "  'word2vec-ruscorpora-300',\n",
+       "  'word2vec-google-news-300',\n",
+       "  'glove-wiki-gigaword-50',\n",
+       "  'glove-wiki-gigaword-100',\n",
+       "  'glove-wiki-gigaword-200',\n",
+       "  'glove-wiki-gigaword-300',\n",
+       "  'glove-twitter-25',\n",
+       "  'glove-twitter-50',\n",
+       "  'glove-twitter-100',\n",
+       "  'glove-twitter-200',\n",
+       "  '__testing_word2vec-matrix-synopsis']}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 显示可用的模型或者数据的信息\n",
+    "# name 参数显示指定模型或者数据的信息\n",
+    "# name_only 表示是否只返回名称信息，不返回所有信息\n",
+    "# 不带参数时，会返回所有数据集和模型的信息\n",
+    "api.info(name_only=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "61bb3216-8d96-4029-98ff-a28238496816",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'num_records': 3000000,\n",
+       " 'file_size': 1743563840,\n",
+       " 'base_dataset': 'Google News (about 100 billion words)',\n",
+       " 'reader_code': 'https://github.com/RaRe-Technologies/gensim-data/releases/download/word2vec-google-news-300/__init__.py',\n",
+       " 'license': 'not found',\n",
+       " 'parameters': {'dimension': 300},\n",
+       " 'description': \"Pre-trained vectors trained on a part of the Google News dataset (about 100 billion words). The model contains 300-dimensional vectors for 3 million words and phrases. The phrases were obtained using a simple data-driven approach described in 'Distributed Representations of Words and Phrases and their Compositionality' (https://code.google.com/archive/p/word2vec/).\",\n",
+       " 'read_more': ['https://code.google.com/archive/p/word2vec/',\n",
+       "  'https://arxiv.org/abs/1301.3781',\n",
+       "  'https://arxiv.org/abs/1310.4546',\n",
+       "  'https://www.microsoft.com/en-us/research/publication/linguistic-regularities-in-continuous-space-word-representations/?from=http%3A%2F%2Fresearch.microsoft.com%2Fpubs%2F189726%2Frvecs.pdf'],\n",
+       " 'checksum': 'a5e5354d40acb95f9ec66d5977d140ef',\n",
+       " 'file_name': 'word2vec-google-news-300.gz',\n",
+       " 'parts': 1}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "api.info('word2vec-google-news-300')"
    ]
   },
   {
@@ -1169,7 +1460,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analysis(Python3.8.12)",
+   "display_name": "DataAnalysis(Python3.8.13)",
    "language": "python",
    "name": "data-analysis"
   },
@@ -1183,7 +1474,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   },
   "toc-autonumbering": true
  },
