--- a/DeepLearning-Actions/06-text-processing.ipynb
+++ b/DeepLearning-Actions/06-text-processing.ipynb
@@ -2742,7 +2742,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analysis(Python3.8.12)",
+   "display_name": "DataAnalysis(Python3.8.13)",
    "language": "python",
    "name": "data-analysis"
   },
@@ -2756,7 +2756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
